# ggml.dart

./: .gitignore  .pubignore  README.md  ffigen.yaml  pubspec.yaml
example/: arange.dart  main.dart
hook/: build.dart  native_toolchain_cmake.dart
lib/: ggml.dart
lib/src/: alloc.dart  backend.dart  base.dart  constants.dart  context.dart  extensions.dart  ggml.dart  ggml.g.dart  graph.dart  params.dart  quantization.dart  struct.dart  system_info.dart  tensor.dart
src/: CMakeLists.txt  ggml.dart.cpp  ggml.dart.h
test/: arange_test.dart  backend_buffer_test.dart  backend_ops_test.dart  blas0_test.dart  conv1d_test.dart  conv_transpose_test.dart  sysinfo_test.dart
